--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		</dependency>
 	</dependencies>
 
-*	<build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
