--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=INNOXPERT_BACK
 # DB Configuration :
 spring.datasource.url=jdbc:mysql://localhost:3306/innoxpert?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # Web Server (Tomcat) configuration :
