impl_basic_services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 # Web Server (Tomcat) configuration :
 server.port=8090
 server.servlet.context-path=/innoxpert
+
+
+
+
+# JWT configuration
+security.jwt.secret-key=NGZmNDI2MTAtNTU5YS00YmJjLThlZTktNDI1MTZiNGFlZjNh
+security.jwt.expiration-time=86400000
