--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+
 
 
 
