--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ server.servlet.context-path=/innoxpert
 # JWT configuration
 security.jwt.secret-key=NGZmNDI2MTAtNTU5YS00YmJjLThlZTktNDI1MTZiNGFlZjNh
 security.jwt.expiration-time=86400000
+# Taille maximale d'un seul fichier (par défaut : 1MB)
+spring.servlet.multipart.max-file-size=50MB
+# Taille maximale pour l'ensemble des fichiers envoyés
+spring.servlet.multipart.max-request-size=200MB
+
