--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,9 @@ server.servlet.context-path=/innoxpert
 security.jwt.secret-key=NGZmNDI2MTAtNTU5YS00YmJjLThlZTktNDI1MTZiNGFlZjNh
 security.jwt.expiration-time=86400000
 # Taille maximale d'un seul fichier (par défaut : 1MB)
-spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-file-size=200MB
 # Taille maximale pour l'ensemble des fichiers envoyés
 spring.servlet.multipart.max-request-size=200MB
+spring.servlet.multipart.enabled=true
+
 
