--- a/pom.xml
+++ b/pom.xml
@@ -94,10 +94,27 @@
 
 
 
+<!-- sayaaariiiiiiiiiiiiiiii -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+
+
+
+
+
+
+
 
 	</dependencies>
 
-*	<build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
