--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
 # Web Server (Tomcat) configuration :
 server.port=8090
 server.servlet.context-path=/innoxpert
@@ -18,3 +20,12 @@ server.servlet.context-path=/innoxpert
 # JWT configuration
 security.jwt.secret-key=NGZmNDI2MTAtNTU5YS00YmJjLThlZTktNDI1MTZiNGFlZjNh
 security.jwt.expiration-time=86400000
+
+#Sayariiiiiii
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=youssefsayari2016@gmail.com
+spring.mail.password=xlol oubj foow xhkp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
