--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,11 @@
 			<version>3.1.5</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http45</artifactId>
+			<version>1.34.0</version>
+		</dependency>
 
 
 
