--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,10 +26,10 @@ spring.servlet.multipart.enabled=true
 
 
 #Sayariiiiiii
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=youssefsayari2016@gmail.com
-spring.mail.password=xlol oubj foow xhkp
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.protocol=smtp
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=youssefsayari2016@gmail.com
+#spring.mail.password=xlol oubj foow xhkp
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.protocol=smtp
