--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itext7-core</artifactId>
 			<version>7.2.5</version>
+			<type>pom</type>
 		</dependency>
 
 
