--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,7 @@ spring.servlet.multipart.enabled=true
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.protocol=smtp
+
+
+
+huggingface.token=Token_here
