--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=INNOXPERT_BACK
 # DB Configuration :
 spring.datasource.url=jdbc:mysql://localhost:3306/innoxpert?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # Web Server (Tomcat) configuration :
@@ -32,9 +32,9 @@ spring.servlet.multipart.enabled=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.protocol=smtp
 
-
 #KTHIREYYYY
 huggingface.token=Token_here
+
 #SAYAAAREYYYY
 pdl.api.key=Token_here
 mistral.api.key=Token_here
